--- a/src/Components/Input.css
+++ b/src/Components/Input.css
@@ -1,7 +1,3 @@
-input:focus {
-  /* outline: none;
-    border: 3px solid var(--md-sys-color-primary); */
-}
 
 input[type="date"] {
   color: trasparent;
